# BorealisEngine

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  game structure.yml  game_structure.yml  graph.dot  rust-toolchain.toml  test.py  utility.py
.cargo/: config.toml
binding/angelscript/: CMakeLists.txt  Cargo.toml  build.rs
binding/angelscript/src/: lib.rs
engine/: Cargo.toml
engine_utils/: Cargo.toml
engine_utils/src/: commandline.rs  lib.rs
filesystem/: Cargo.toml  upkf.yml
filesystem/bpak/: Cargo.toml  bpak.d
filesystem/src/: compressor.rs  compressor.rs.upkfmeta  decompressor.rs  layered.rs  lib.rs  upkf.rs
filesystem/src/layered/: layers.rs  mod.rs
filesystem/src/layered/layers/: folder.rs  mod.rs  upkf.rs  vpk.rs
filesystem/upkf/: Cargo.toml
filesystem/upkf/src/: lib.rs  upkf.rs
filesystem/vpk/: Cargo.toml
filesystem/vpk/src/: exts.rs  lib.rs
renderer/: Cargo.toml
renderer/src/: buffer.rs  lib.rs  shader.wgsl  state.rs
richpresence/: Cargo.toml
richpresence/src/: discord.rs  lib.rs  steam.rs
src/: main.rs
tier-0/: Cargo.toml
tier0/: Cargo.toml  features.yml
tier0/src/: command_line.rs  commandline.rs  config_file.rs  console.rs  lib.rs  types.rs
tier0/src/format/: e.rs  kv.rs  mod.rs
tier1/: Cargo.toml
tier1/src/: color.rs  config_file.rs  console.rs  lib.rs
tier_0/: Cargo.toml
tools/: Cargo.toml
tools/src/filesystem/: compressor.rs  decompressor.rs  fscli.rs
tools/src/filesystem/shell/: builtin.rs  layer.rs  mod.rs  parse.rs  path.rs  read.rs
uscript/: Cargo.toml
uscript/angelscript/: Cargo.toml
uscript/src/: dyonn.rs  lib.rs  rhaii.rs
