[package]
    name = 'ungine'
    version = '0.1.0'
    authors = ['ENDERZOMBI102']
    edition = '2021'
    description = 'A source-inspired game engine'
    repository = 'https://github.com/ENDERZOMBI102/Ungine.rs'
    license = 'MIT'

[workspace]
    resolver = '2'
    members = [
        '.', 'filesystem', 'renderer',
        'richpresence', 'tier0', 'engine',
        'tools',
        'uscript', 'uscript/angelscript'
    ]

[dependencies]
    filesystem = { path = 'filesystem' }
    renderer = { path = 'renderer' }
    richpresence = { path = 'richpresence' }
    tier0 = { path = 'tier0' }
    engine = { path = 'engine' }
    rand = '0.8.5'
    log = '0.4.17'
