[package]
    name = 'ungine'
    version = '0.1.0'
    authors = [ 'ENDERZOMBI102' ]
    edition = '2021'
    description = 'A game engine inspired by Valbe\'s Source Engine'
    repository = 'https://github.com/ENDERZOMBI102/Ungine.rs'
    license = 'MIT'

[workspace]
    members = [
        '.',
		# shared modules
		'tier0', 'tier1', 'uscript', 'filesystem', 'filesystem/vpk', # TODO: Remove vpk from here
		# client modules
		'renderer', 'richpresence',
		# individually-runnable generic tools
		'tools',
    ]

[dependencies]
    filesystem = { path = 'filesystem' }
    renderer = { path = 'renderer' }
    richpresence = { path = 'richpresence' }
    tier0 = { path = 'tier0' }
    engine = { path = 'engine' }
    rand = '0.8.5'
    log = '0.4.17'
