[package]
    name = 'filesystem'
    version = '0.1.0'
    edition = '2021'
    description = 'FileSystem utilities'

[lib]
    crate_type = [ 'dylib' ]

[dependencies]
    json = '0.12.4'
    savefile = '0.12.0'
    byteorder = '1.4.3'
    bytes = '1.1.0'
    lzma-rs = '0.3.0'
    libflate = '1.2.0'
    bzip2 = '0.4.3'
    crc32fast = '1.3.0'
    sha256 = '1.0.3'
    path-slash = '0.2.1'
    vpk = '0.1.4'
    bin-layout = '7.1.0'
    tier0 = { path = '../tier0' }
    uuid = { version = '1.2.1', features = [ "v4", "fast-rng", "macro-diagnostics" ] }
