[package]
    name = 'renderer'
    version = '0.1.0'
    edition = '2021'
    description = 'Ungines Renderer'

[lib]
    crate_type = [ 'rlib', 'dylib' ]

[dependencies]
    image = "0.24.5"
    winit = "0.27.5"
    cgmath = '0.18.0'
    log = '0.4.17'
    wgpu = "0.14.2"
    pollster = '0.2.5'
    bytemuck = { version = '1.4', features = [ 'derive' ] }
    tier0 = { path = '../tier0' }
