[package]
    name = 'renderer'
    version = '0.1.0'
    edition = '2021'

[lib]
    crate_type = [ 'dylib' ]

[dependencies]
	image = '0.24.5'
	winit = '0.28.1'
	cgmath = '0.18.0'
	log = '0.4.17'
	wgpu = '0.15.1'
	pollster = '0.3.0'
	bytemuck = { version = '1.4', features = [ 'derive' ] }
    tier0 = { path = '../tier0' }
