[package]
    name = 'renderer'
    version = '0.1.0'
    edition = '2021'

[lib]
    crate_type = [ 'dylib' ]

[dependencies]
	image = '0.24.7'
	winit = '0.29.3'
	cgmath = '0.18.0'
	log = '0.4.20'
	wgpu = '0.18.0'
	pollster = '0.3.0'
	bytemuck = { version = '1.14', features = [ 'derive' ] }
    tier0 = { path = '../tier0' }
