[package]
    name = 'tools'
    version = '0.1.0'
    edition = '2021'
    description = 'All Ungine tools are store here'

[[bin]]
    name = 'compressor'
    path = 'src/filesystem/compressor.rs'

[[bin]]
    name = 'decompressor'
    path = 'src/filesystem/decompressor.rs'

[[bin]]
    name = 'fscli'
    path = 'src/filesystem/fscli.rs'

[[bin]]
    name = 'findjava'
    path = 'src/findjava.rs'

[dependencies]
    filesystem = { path = '../filesystem' }
    tier0 = { path = '../tier0' }
    bytes = '1.1.0'
    walkdir = '2.3.2'

