[package]
    name = 'tools'
    version = '0.1.0'
    edition = '2021'
    description = 'Individually-runnable generic tools'

[[bin]]
    name = 'compressor'
    path = 'src/filesystem/compressor.rs'

[[bin]]
    name = 'decompressor'
    path = 'src/filesystem/decompressor.rs'

[[bin]]
    name = 'fscli'
    path = 'src/filesystem/fscli.rs'

[dependencies]
    filesystem = { path = '../filesystem' }
	upkf = { path = '../filesystem/upkf' }
	tier0 = { path = '../tier0' }
    walkdir = '2.3.2'
	bytes = '1.4.0'

