[package]
	name = 'bpak'
	version = '0.1.0'
	edition = '2021'
	description = 'Library for interacting with Borealis PAK archives'

[lib]
	crate_type = [ 'dylib' ]

[dependencies]
	thiserror = '1.0.50'
	byteorder = '1.5.0'
	lzma-rs = '0.3.0'
	libflate = '2.0.0'
	bzip2 = '0.4.4'
	crc32fast = '1.3.2'
	sha256 = '1.4.0'
